syntax = "proto3";

package bene.data;
option go_package = "github.com/minkezhang/bene-api/proto/go/data";

import "proto/api.proto";
import "google/protobuf/timestamp.proto";

enum NodeType {
  NODE_UNKNOWN  = 0;
  NODE_SEMANTIC = 1;
  NODE_TV       = 2;
  NODE_MOVIE    = 3;
  NODE_VIDEO    = 4;
  NODE_PAPER    = 5;
  NODE_BOOK     = 6;
  NODE_NOVELLA  = 7;  // e.g. short story or poem
  // NODE_FANFICTION = 16;
  NODE_GAME     = 8;
  NODE_ALBUM    = 9;
  NODE_SONG     = 10;
  NODE_PODCAST  = 11;
}

message Query {
  oneof query {
    bene.api.ID query_node = 1;  // API_BENE_NODE
    QueryAtom   query_atom = 2;
  }
}

message QueryAtom {
  NodeType type = 2;
  Atom     atom = 3;
}

message Node {
           bene.api.ID id        = 1;  // API_BENE_NODE
           Node        parent    = 2;
           NodeType    type      = 3;
           bool        is_queued = 4;
  repeated Atom        atoms     = 5;
  repeated Node        related   = 6;
}

message Atom {
  bene.api.ID id          = 1;
  string      title       = 2;
  string      preview_url = 3;
  int32       score       = 4;  // Valid range [0, 100]
  bool        is_dirty    = 5;
  oneof       metadata {
    MetadataTV      metadata_tv      = 100;
    MetadataMovie   metadata_movie   = 101;
    MetadataVideo   metadata_video   = 102;
    MetadataPaper   metadata_paper   = 103;
    MetadataBook    metadata_book    = 104;
    MetadataNovella metadata_novella = 105;
    MetadataGame    metadata_game    = 106;
    MetadataAlbum   metadata_album   = 107;
    MetadataSong    metadata_song    = 108;
    MetadataPodcast metadata_podcast = 109;
  }
}

message MetadataTV {
           int32  season                   = 1;  // Used if tracking a single
                                                 // season, e.g. One Punch Man
           bool   is_animated              = 2;
  repeated string genres                   = 3;
  repeated string showrunners              = 4;
           MetadataAuxVideo metadata_video = 5;
}

message MetadataMovie {
  bool          is_animated       = 1;
  MetadataAuxVideo metadata_video = 2;
}

message MetadataAuxVideo {
  repeated string directors        = 1;
  repeated string writers          = 2;
  repeated string cinematography   = 3;
  repeated string music            = 4;
  repeated string starring         = 5;
           string animation_studio = 6;
}

message MetadataVideo {
  string creator   = 1;  // e.g. EthosLab
  string video_url = 2;

}

message MetadataPaper {
  repeated string                    authors          = 1;
           google.protobuf.Timestamp publication_date = 2;
}

message MetadataBook {
           int32                 series              = 1;  // Used if tracking
                                                           // as part of a
                                                           // series, e.g. The
                                                           // Two Towers
           bool                  is_animated         = 2;
  repeated string                genres              = 3;
           MetadataAuxLiterature metadata_literature = 4;
}

message MetadataNovella {
  MetadataAuxLiterature metadata_literature = 1;
}

message MetadataAuxLiterature {
  repeated string authors      = 1;
  repeated string illustrators = 2;
}

message MetadataGame {
  repeated string developers = 1;
  repeated string directors  = 2;
  repeated string artists    = 3;
  repeated string composers  = 4;
  repeated string genres     = 5;
}

message MetadataAlbum {
  repeated string           genres         = 1;
           MetadataAuxAudio metadata_audio = 2;
}

message MetadataSong {
  int32            track          = 1;
  MetadataAuxAudio metadata_audio = 2;
}

message MetadataAuxAudio {
  repeated string artists   = 1;
  repeated string writers   = 2;
  repeated string composers = 3;
}

message MetadataPodcast {
  repeated string hosts     = 1;
  repeated string genres    = 2;
  repeated string narrators = 3;
}
